--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,12 @@ export(OrderingToRanking)
 export(RankDistanceModel)
 export(RanktoHash)
 exportClasses(RankControl)
+exportClasses(RankControlKendall)
+exportClasses(RankControlPhiComponent)
 exportClasses(RankControlWeightedKendall)
 exportClasses(RankData)
 exportClasses(RankInit)
+exportMethods(FindProb)
+exportMethods(SingleClusterModel)
 importFrom(Rcpp,sourceCpp)
 useDynLib(rankdist)
