--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Depends: R (>= 2.10)
 Imports: Rcpp (>= 0.11.4),
     hash,
     optimx,
+    permute,
     methods
 LinkingTo: Rcpp
 LazyData: true
