Fix namesapce issue: auto load

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ exportClasses(RankControlWeightedKendall)
 exportClasses(RankData)
 exportClasses(RankInit)
 import(methods)
+import(stats)
 importFrom(Rcpp,sourceCpp)
 useDynLib(rankdist)
